# Master-thesis

./: .gitignore  CMakeLists.txt
data/exact-public/: exact_public_results.txt
data/test_small_data_PACE2023/: small_data_results.txt
inc/: Algorithms.hpp  Benchmark.hpp  FileReader.hpp  GraphAL.hpp  GraphAM.hpp  GreedySolver.hpp  IGraph.hpp  ITwinWidthSolver.hpp  MDAdapter.hpp  MonteCarloTreeSearchExact.hpp  MonteCarloTreeSearch_v1.hpp  VerticesPositions.hpp
src/: Algorithms.cpp  Benchmark.cpp  FileReader.cpp  GraphAL.cpp  GraphAM.cpp  GreedySolver.cpp  MDAdapter.cpp  MDAdapterMain.cpp  MonteCarloTreeSearchExact.cpp  MonteCarloTreeSearch_v1.cpp  SinglePlayerMonteCarloTreeSearch.cpp  benchmark_test.cpp  main.cpp  mainSolver.cpp  optimization.py
test/: test.cpp
